--- a/tpl/layout.pug
+++ b/tpl/layout.pug
@@ -1,6 +1,5 @@
-html
-  body
-    block content
-      | First content
-    p Content in between
-    block footer
+main
+  block content
+    | First content
+  p Content in between
+  block footer
