--- a/tpl/all.pug
+++ b/tpl/all.pug
@@ -20,7 +20,7 @@ block append content
       p you have #{friends} friends
   
   h2 Conditions
-  p(class="1", toto=1 + pet) Hello world!
+  p(class="1", toto=1) Hello world!
     a Top
       |  
     a.somthing.toto= pet('blas')
