Implement mixin block

--- a/tpl/all.pug
+++ b/tpl/all.pug
@@ -7,7 +7,7 @@ block append content
   p This is #{msg.toUpperCase() + ' is the message'}
   +withSomeBlock()
     p
-      this text should be in red
+      | this text should be in red
   
   h2 Inputs
   each input in inputs
